# harbor

./: pyproject.toml
adapters/RealCode/: README.md  adapter.py  run_adapter.py
adapters/RealCode/golden/autorccar/: README.md  environment.yml  start.md
adapters/RealCode/golden/gitingest/: IMPLEMENTATION_SUMMARY.md  TEST_WITHOUT_GITHUB.md  start.md
adapters/RealCode/golden/justext/: README.md  example.py  extract_text.py  requirements.txt  setup.py  start.md  (+2 more)
adapters/RealCode/golden/pylama/: .gitignore  IMPLEMENTATION_STATUS.md  LICENSE  README.rst  setup.cfg  setup.py  start.md  test_all_linters.py  test_cli.py  test_file.py  test_import.py
adapters/RealCode/golden/pylama/pylama/: __init__.py  __main__.py  check_async.py  config.py  config_toml.py  context.py  core.py  errors.py  hook.py  main.py  pytest.py  utils.py
adapters/RealCode/golden/pylama/pylama/libs/: __init__.py  inirama.py
adapters/RealCode/golden/pylama/pylama/lint/: __init__.py  eradicate.py  isort.py  mccabe.py  mypy.py  pycodestyle.py  pydocstyle.py  pyflakes.py  pylint.py  radon.py  vulture.py
adapters/RealCode/golden/pylama/tests/: run_tests.py  test.sh
adapters/RealCode/golden/pylama/tests/test_cases/: feature1_linter_integration.json  feature2_config_management.json  feature3_file_scanning.json  feature4_1_json_output.json  feature4_2_human_output.json  feature5_async_processing.json  feature6_cli_interface.json  feature7_git_hooks.json  feature8_error_deduplication.json
adapters/RealCode/golden/unittest-parametrize/: check_test_results.py  check_test_results2.py  debug_decorator_order.py  debug_decorator_order2.py  debug_patch.py  delete_case.py  enhance.py  execution_log.txt  fix_feature1.py  fix_feature2.py  pyproject.toml  test_debug.py  test_error_enhancement_simple.py  test_generation_debug.py
adapters/RealCode/golden/unittest-parametrize/examples/: basic_usage.py
adapters/RealCode/golden/unittest-parametrize/src/unittest_parametrize/: __init__.py  core.py  decorators.py  param.py  testcase.py  utils.py  validation.py
adapters/RealCode/golden/unittest-parametrize/tests/: test.sh  test_runner.py  test_runner_old.py
adapters/RealCode/golden/unittest-parametrize/tests/stdout/: feature1_basic_parametrization@000.txt  feature1_basic_parametrization@001.txt  feature1_basic_parametrization@002.txt  feature1_basic_parametrization@003.txt  feature1_basic_parametrization@004.txt  feature1_basic_parametrization@005.txt  feature1_basic_parametrization@006.txt  feature1_basic_parametrization@007.txt  feature1_basic_parametrization@009.txt  feature2_custom_ids@000.txt  feature2_custom_ids@001.txt  feature2_custom_ids@002.txt  feature2_custom_ids@003.txt  feature2_custom_ids@004.txt  feature2_custom_ids@008.txt  feature3_async_support@000.txt  feature3_async_support@001.txt  feature3_async_support@002.txt  feature3_async_support@003.txt  feature4_1_decorator_constraints@000.txt  feature4_1_decorator_constraints@001.txt  feature4_1_decorator_constraints@002.txt  feature4_1_decorator_constraints@004.txt  feature4_2_parameter_validation@000.txt  feature4_2_parameter_validation@001.txt  feature4_2_parameter_validation@002.txt  feature4_2_parameter_validation@003.txt  feature4_2_parameter_validation@004.txt  feature4_3_error_enhancement@001.txt  feature4_4_compatibility@002.txt
adapters/RealCode/golden/unittest-parametrize/tests/test_cases/: feature1_basic_parametrization.json  feature2_custom_ids.json  feature3_async_support.json  feature4_1_decorator_constraints.json  feature4_2_parameter_validation.json  feature4_3_error_enhancement.json  feature4_4_compatibility.json
adapters/swebench/: adapter.py  pyproject.toml  utils.py
src/harbor/llms/: base.py  friday.py
(+977 files in other folders)
