[project]
name = "swebench-harbor-adapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "swebench>=4.1.0",
]

[tool.uv]
index-url = "https://pypi.org/simple/"
override-dependencies = [
    "pyarrow==18.1.0",
    "numpy>=2.1.0,<2.3.0",
    "pandas>=2.2.0,<2.3.3",
    "pyzmq<27.0.0",
    "uuid-utils<0.13.0",
    "tiktoken<0.12.0",
]
