[metadata]
name = pylama
author = Pylama Developers
author_email = pylama@example.com
description = Code audit tool for Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/klen/pylama
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pycodestyle>=2.9.1
    pyflakes>=2.5.0
    mccabe>=0.7.0
    pydocstyle>=6.1.1
    inirama>=0.3.1
    tomli>=1.2.0; python_version < '3.11'

[options.extras_require]
full =
    pylint>=2.12.0
    mypy>=0.910
    isort>=5.10.0
    eradicate>=2.0.0
    vulture>=2.3
    radon>=5.1.0
test =
    pytest>=7.1.2
    pytest-mypy
    eradicate>=2.0.0
    radon>=5.1.0
    mypy
    pylint>=2.11.1
    pylama-quotes
    toml
    vulture
    types-setuptools
    types-toml
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0

[options.entry_points]
console_scripts =
    pylama = pylama.main:shell
pytest11 =
    pylama = pylama.pytest

[bdist_wheel]
universal = 1

[coverage:run]
source = pylama
omit = */test_*,*/tests/*,*/__pycache__/*

[flake8]
max-line-length = 100
extend-ignore = E203, W503

[pydocstyle]
convention = numpy