[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unittest-parametrize"
version = "1.0.0"
description = "Parameterized testing for unittest framework"
readme = "README.md"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
    "Framework :: Django",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/example/unittest-parametrize"
Repository = "https://github.com/example/unittest-parametrize"
Issues = "https://github.com/example/unittest-parametrize/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/unittest_parametrize"]